samples/_failures_safe/1761342736_b912a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd14d788.c: In function ‘main’:
./samples/SAFE/__tmp_dd14d788.c:144:17: error: expected declaration or statement at end of input
  144 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_dd14d788.c:144:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dd14d788.c:144:17: error: expected declaration or statement at end of input
